fixed some bugs

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
 </head>
 <body>
     <div class="container">
+
+        <div class="hamburguer">
+            <div class="line" id="line1"></div>
+            <div class="line" id="line2"></div>
+            <div class="line" id="line3"></div>
+        </div>
+        
         <header>
             <div class="img-wrapper">
                 <img src="Imagens/BackGround.jpg" alt="">
@@ -23,6 +30,21 @@
                 <button>Saiba Mais</button>
             </div>
         </header>
-    </div>    
+        <div class="sidebar">
+            <nav>
+                <ul class="menu">
+                    <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Conhecimento</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Projetos</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Contato</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Orçamento</a></li>
+                </ul>
+            </nav>
+            <div class="social-media">
+                <a href="#"><i class="fab fa"></i></a>
+                <a href="#"><i class="fab fa"></i></a>
+                <a href="#"><i class="fab fa"></i></a>
+            </div>
+        </div>
 </body>
 </html>
